grammarTraductorParser.py
# Generated from grammarTraductor.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class grammarTraductorParser ( Parser ):

    grammarFileName = "grammarTraductor.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'def'", "'return'", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'='", "'('", "')'", "':'", 
                     "','" ]

    symbolicNames = [ "<INVALID>", "DEF", "RETURN", "ID", "CONT", "PLUS", 
                      "MINUS", "MULT", "DIVI", "EQUALS", "LPAREN", "RPAREN", 
                      "COLON", "COMMA", "WS", "INDENT", "NEWLINE", "COMMENT" ]

    RULE_program = 0
    RULE_statement_root = 1
    RULE_function = 2
    RULE_function_declaration = 3
    RULE_param_list = 4
    RULE_param = 5
    RULE_code_block = 6
    RULE_statement = 7
    RULE_assignment = 8
    RULE_return_statement = 9
    RULE_expr = 10
    RULE_term = 11
    RULE_factor = 12
    RULE_function_call = 13
    RULE_arg_list = 14

    ruleNames =  [ "program", "statement_root", "function", "function_declaration", 
                   "param_list", "param", "code_block", "statement", "assignment", 
                   "return_statement", "expr", "term", "factor", "function_call", 
                   "arg_list" ]

    EOF = Token.EOF
    DEF=1
    RETURN=2
    ID=3
    CONT=4
    PLUS=5
    MINUS=6
    MULT=7
    DIVI=8
    EQUALS=9
    LPAREN=10
    RPAREN=11
    COLON=12
    COMMA=13
    WS=14
    INDENT=15
    NEWLINE=16
    COMMENT=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement_root(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarTraductorParser.Statement_rootContext)
            else:
                return self.getTypedRuleContext(grammarTraductorParser.Statement_rootContext,i)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarTraductorParser.FunctionContext)
            else:
                return self.getTypedRuleContext(grammarTraductorParser.FunctionContext,i)


        def getRuleIndex(self):
            return grammarTraductorParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = grammarTraductorParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1054) != 0):
                self.state = 32
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [2, 3, 4, 10]:
                    self.state = 30
                    self.statement_root()
                    pass
                elif token in [1]:
                    self.state = 31
                    self.function()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_rootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(grammarTraductorParser.StatementContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(grammarTraductorParser.NEWLINE)
            else:
                return self.getToken(grammarTraductorParser.NEWLINE, i)

        def getRuleIndex(self):
            return grammarTraductorParser.RULE_statement_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_root" ):
                listener.enterStatement_root(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_root" ):
                listener.exitStatement_root(self)




    def statement_root(self):

        localctx = grammarTraductorParser.Statement_rootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement_root)
        self._la = 0 # Token type
        try:
            self.state = 44
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.statement()
                self.state = 39 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 38
                    self.match(grammarTraductorParser.NEWLINE)
                    self.state = 41 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==16):
                        break

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_declaration(self):
            return self.getTypedRuleContext(grammarTraductorParser.Function_declarationContext,0)


        def NEWLINE(self):
            return self.getToken(grammarTraductorParser.NEWLINE, 0)

        def code_block(self):
            return self.getTypedRuleContext(grammarTraductorParser.Code_blockContext,0)


        def getRuleIndex(self):
            return grammarTraductorParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = grammarTraductorParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.function_declaration()
            self.state = 47
            self.match(grammarTraductorParser.NEWLINE)
            self.state = 48
            self.code_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(grammarTraductorParser.DEF, 0)

        def ID(self):
            return self.getToken(grammarTraductorParser.ID, 0)

        def LPAREN(self):
            return self.getToken(grammarTraductorParser.LPAREN, 0)

        def param_list(self):
            return self.getTypedRuleContext(grammarTraductorParser.Param_listContext,0)


        def RPAREN(self):
            return self.getToken(grammarTraductorParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(grammarTraductorParser.COLON, 0)

        def getRuleIndex(self):
            return grammarTraductorParser.RULE_function_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_declaration" ):
                listener.enterFunction_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_declaration" ):
                listener.exitFunction_declaration(self)




    def function_declaration(self):

        localctx = grammarTraductorParser.Function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(grammarTraductorParser.DEF)
            self.state = 51
            self.match(grammarTraductorParser.ID)
            self.state = 52
            self.match(grammarTraductorParser.LPAREN)
            self.state = 53
            self.param_list()
            self.state = 54
            self.match(grammarTraductorParser.RPAREN)
            self.state = 55
            self.match(grammarTraductorParser.COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarTraductorParser.ParamContext)
            else:
                return self.getTypedRuleContext(grammarTraductorParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(grammarTraductorParser.COMMA)
            else:
                return self.getToken(grammarTraductorParser.COMMA, i)

        def getRuleIndex(self):
            return grammarTraductorParser.RULE_param_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_list" ):
                listener.enterParam_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_list" ):
                listener.exitParam_list(self)




    def param_list(self):

        localctx = grammarTraductorParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_param_list)
        self._la = 0 # Token type
        try:
            self.state = 66
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.param()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==13:
                    self.state = 58
                    self.match(grammarTraductorParser.COMMA)
                    self.state = 59
                    self.param()
                    self.state = 64
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(grammarTraductorParser.ID, 0)

        def getRuleIndex(self):
            return grammarTraductorParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = grammarTraductorParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(grammarTraductorParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Code_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INDENT(self, i:int=None):
            if i is None:
                return self.getTokens(grammarTraductorParser.INDENT)
            else:
                return self.getToken(grammarTraductorParser.INDENT, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarTraductorParser.StatementContext)
            else:
                return self.getTypedRuleContext(grammarTraductorParser.StatementContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(grammarTraductorParser.NEWLINE)
            else:
                return self.getToken(grammarTraductorParser.NEWLINE, i)

        def getRuleIndex(self):
            return grammarTraductorParser.RULE_code_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCode_block" ):
                listener.enterCode_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCode_block" ):
                listener.exitCode_block(self)




    def code_block(self):

        localctx = grammarTraductorParser.Code_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_code_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 70
                self.match(grammarTraductorParser.INDENT)
                self.state = 75
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 71
                    self.statement()
                    self.state = 72
                    self.match(grammarTraductorParser.NEWLINE)
                    pass

                elif la_ == 2:
                    self.state = 74
                    self.statement()
                    pass


                self.state = 79 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==15):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(grammarTraductorParser.AssignmentContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(grammarTraductorParser.Return_statementContext,0)


        def function_call(self):
            return self.getTypedRuleContext(grammarTraductorParser.Function_callContext,0)


        def expr(self):
            return self.getTypedRuleContext(grammarTraductorParser.ExprContext,0)


        def getRuleIndex(self):
            return grammarTraductorParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = grammarTraductorParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statement)
        try:
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.return_statement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                self.function_call()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 84
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(grammarTraductorParser.ID, 0)

        def EQUALS(self):
            return self.getToken(grammarTraductorParser.EQUALS, 0)

        def expr(self):
            return self.getTypedRuleContext(grammarTraductorParser.ExprContext,0)


        def getRuleIndex(self):
            return grammarTraductorParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = grammarTraductorParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(grammarTraductorParser.ID)
            self.state = 88
            self.match(grammarTraductorParser.EQUALS)
            self.state = 89
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(grammarTraductorParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(grammarTraductorParser.ExprContext,0)


        def ID(self):
            return self.getToken(grammarTraductorParser.ID, 0)

        def getRuleIndex(self):
            return grammarTraductorParser.RULE_return_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_statement" ):
                listener.enterReturn_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_statement" ):
                listener.exitReturn_statement(self)




    def return_statement(self):

        localctx = grammarTraductorParser.Return_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_return_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(grammarTraductorParser.RETURN)
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 92
                self.expr()
                pass

            elif la_ == 2:
                self.state = 93
                self.match(grammarTraductorParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarTraductorParser.TermContext)
            else:
                return self.getTypedRuleContext(grammarTraductorParser.TermContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(grammarTraductorParser.PLUS)
            else:
                return self.getToken(grammarTraductorParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(grammarTraductorParser.MINUS)
            else:
                return self.getToken(grammarTraductorParser.MINUS, i)

        def getRuleIndex(self):
            return grammarTraductorParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = grammarTraductorParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.term()
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5 or _la==6:
                self.state = 97
                _la = self._input.LA(1)
                if not(_la==5 or _la==6):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 98
                self.term()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarTraductorParser.FactorContext)
            else:
                return self.getTypedRuleContext(grammarTraductorParser.FactorContext,i)


        def MULT(self, i:int=None):
            if i is None:
                return self.getTokens(grammarTraductorParser.MULT)
            else:
                return self.getToken(grammarTraductorParser.MULT, i)

        def DIVI(self, i:int=None):
            if i is None:
                return self.getTokens(grammarTraductorParser.DIVI)
            else:
                return self.getToken(grammarTraductorParser.DIVI, i)

        def getRuleIndex(self):
            return grammarTraductorParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)




    def term(self):

        localctx = grammarTraductorParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.factor()
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7 or _la==8:
                self.state = 105
                _la = self._input.LA(1)
                if not(_la==7 or _la==8):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 106
                self.factor()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONT(self):
            return self.getToken(grammarTraductorParser.CONT, 0)

        def function_call(self):
            return self.getTypedRuleContext(grammarTraductorParser.Function_callContext,0)


        def LPAREN(self):
            return self.getToken(grammarTraductorParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(grammarTraductorParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(grammarTraductorParser.RPAREN, 0)

        def ID(self):
            return self.getToken(grammarTraductorParser.ID, 0)

        def getRuleIndex(self):
            return grammarTraductorParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)




    def factor(self):

        localctx = grammarTraductorParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_factor)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.match(grammarTraductorParser.CONT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.function_call()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 114
                self.match(grammarTraductorParser.LPAREN)
                self.state = 115
                self.expr()
                self.state = 116
                self.match(grammarTraductorParser.RPAREN)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 118
                self.match(grammarTraductorParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(grammarTraductorParser.ID, 0)

        def LPAREN(self):
            return self.getToken(grammarTraductorParser.LPAREN, 0)

        def arg_list(self):
            return self.getTypedRuleContext(grammarTraductorParser.Arg_listContext,0)


        def RPAREN(self):
            return self.getToken(grammarTraductorParser.RPAREN, 0)

        def getRuleIndex(self):
            return grammarTraductorParser.RULE_function_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_call" ):
                listener.enterFunction_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_call" ):
                listener.exitFunction_call(self)




    def function_call(self):

        localctx = grammarTraductorParser.Function_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_function_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(grammarTraductorParser.ID)
            self.state = 122
            self.match(grammarTraductorParser.LPAREN)
            self.state = 123
            self.arg_list()
            self.state = 124
            self.match(grammarTraductorParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arg_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarTraductorParser.ExprContext)
            else:
                return self.getTypedRuleContext(grammarTraductorParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(grammarTraductorParser.COMMA)
            else:
                return self.getToken(grammarTraductorParser.COMMA, i)

        def getRuleIndex(self):
            return grammarTraductorParser.RULE_arg_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg_list" ):
                listener.enterArg_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg_list" ):
                listener.exitArg_list(self)




    def arg_list(self):

        localctx = grammarTraductorParser.Arg_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_arg_list)
        self._la = 0 # Token type
        try:
            self.state = 135
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 4, 10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.expr()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==13:
                    self.state = 127
                    self.match(grammarTraductorParser.COMMA)
                    self.state = 128
                    self.expr()
                    self.state = 133
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





